syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.inovationbehavior.backend.Protos";
option java_outer_classname = "RagProto";

service RagService {
  rpc GetRagAnswer (RagRequest) returns (RagResponse);
  rpc GetPatentInfo (PatentInfoRequest) returns (PatentInfoResponse);
  rpc GetEnterpriseInterest (EnterpriseInterestRequest) returns (EnterpriseInterestResponse);
}

message RagRequest {
  string user_query = 1;
  string patent_no = 2;
}

message RagResponse {
  string answer = 1;
}

message PatentInfoRequest {
  string patent_no = 1;
}

message PatentInfoResponse {
  string patent_info = 1; // 或用结构化字段
}

message EnterpriseInterestRequest {
  string patent_no = 1;
}

message EnterpriseInterestResponse {
  string interest_level = 1;
}

service AgentService {
  rpc Chat (AgentRequest) returns (AgentResponse);
}

message AgentRequest {
  string query = 1;
  string user_id = 2;   // 用户ID，用于多租户记忆区分
  string session_id = 3;  // 可选会话ID
}

message AgentResponse {
  string answer = 1;
}